---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "newlines",
                                value: AliasedYaml {
                                    alias: Some(
                                        "newline",
                                    ),
                                    value: LiteralString(
                                        [
                                            "Several lines of text,",
                                            "with some \"quotes\" of various 'types',",
                                            "and also a blank line:",
                                            "",
                                            "and some text with",
                                            "  extra indentation",
                                            "on the next line,",
                                            "plus another line at the end.",
                                            "",
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "folded",
                                value: AliasedYaml {
                                    alias: Some(
                                        "folded",
                                    ),
                                    value: FoldedString(
                                        [
                                            "Several lines of text,",
                                            "with some \"quotes\" of various 'types',",
                                            "and also a blank line:",
                                            "",
                                            "and some text with",
                                            "  extra indentation",
                                            "on the next line,",
                                            "plus another line at the end.",
                                            "",
                                            "",
                                            "",
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "test",
                                value: AliasedYaml {
                                    alias: None,
                                    value: UnquotedString(
                                        "5",
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
